# dip

./: .gitignore  .gitmodules  ;  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: rust.yml
.obsidian/themes/GitHub theme/: manifest.json  theme.css
dipin/: dipin  install
docs/handbook/: README.md  👋 Getting Started.md  🔗 Links.md  🛒 Glossary.md
docs/handbook/.obsidian/: community-plugins.json  graph.json
docs/handbook/.obsidian/plugins/obsidian-git/: data.json
docs/handbook/Engineering/: 🆕 Onboarding.md  👷 About Engineering.md
docs/handbook/Engineering/Architecture/: 🌐 Website.md  🏗 Architecture.md  📕 Handbook.md
docs/handbook/Engineering/Architecture/Plugins/: Desktop.md  MDX.md  Static Site Generator.md
docs/handbook/Product/: 📦 About Product.md
docs/handbook/Product/Framework/: 💎 About dip Framework.md  💻 Command Line Tool.md
docs/handbook/Product/Framework/CLI/: Installation.md  Usage.md  💻 Command Line Tool.md
docs/handbook/Product/Framework/CLI/Commands/: Commands.md  build.md
docs/handbook/Product/Framework/Plugins/: Desktop.md  🔌 Plugins.md
docs/handbook/Product/Framework/Plugins/UI/: 🎨 UI Plugins.md
docs/handbook/Product/Guide/: Getting Started.md  🏫 About Guide.md
docs/handbook/Product/Handbook/: Apply changes to handbook with Obsidian Git.md  Installation.md  User Story.md  📕 About Handbook.md
docs/handbook/Product/Learn/: Getting Started.md  🏫 About Learn.md
docs/website/: config.toml  tailwind.config.js
docs/website/content/: tutorial.md
docs/website/content/docs/debug/: _index.md  markdown.md
docs/website/content/docs/development/: _index.md  conventions.md  overview.md  website.md
docs/website/styles/: style.css
docs/website/templates/: base.html  breadcrumb.html  head.html  index.html  logo.html  page.html
docs/website/templates/header/: index.html
docs/website/templates/icons/: chevron-down.html  chevron-right.html  desktop-computer.html  document-duplicate.html  github.html  menu.html  sun.html  x.html
examples/: cli.rs  core-state.rs  counter.rs  desktop.rs  global-state-ecs.rs  global-state.rs  key-bindings.rs  keyboard-event.rs  local-state.rs  minimum.rs  ping-pong.rs  root-props.rs  root_props.rs  window.rs
examples/cli/: async.rs  cli.rs  config.rs
examples/cli/config/: config.rs  main.rs
examples/cli/config/config/: default.toml  development.toml  production.toml
examples/counter/: channel.rs  global-state-ecs.rs
examples/desktop/: async.rs  counter.rs  minimum.rs  root_props.rs
examples/desktop/keyboard/: bindings.rs  keyboard_event.rs
examples/desktop/state_management/: ecs.rs  global_state.rs  local_state.rs
examples/desktop/window/: multiple_windows.rs  render_mode.rs  scale_factor_override.rs  settings.rs
examples/keyboard/: bindings.rs  keyboard_event.rs
examples/state_management/: ecs.rs  global_state.rs  local_state.rs
examples/todomvc/: Cargo.toml  build.rs  channel.rs  component.rs  event.rs  global_state.rs  main.rs  resource.rs  system.rs  tailwind.config.js  ui.rs  ui_action.rs  ui_state.rs
examples/todomvc/global-state-ecs/: channel.rs  global_state.rs  main.rs  system.rs  ui.rs
examples/todomvc/src/: component.rs  event.rs  lib.rs  main.rs  system.rs  ui.rs  ui_state.rs
examples/todomvc/static/: style.css
examples/todomvc/styles/: globals.css
examples/web/: minimum.rs
examples/web3/: starknet.rs
examples/window/: multiple-windows.rs  multiple_windows.rs  render-mode.rs  render_mode.rs  scale-factor-override.rs  scale_factor_override.rs  settings.rs  update-mode.rs  window-update-mode.rs
plugins/builder/: Cargo.toml
plugins/builder/config/: default.toml
plugins/builder/src/: config.rs  lib.rs  schedule.rs
plugins/bundle/: Cargo.toml  Configuration.md  Dependencies.md  Event flow.md  Profile repository structure.md  Specifications.md  Usage.md  User Story.md
plugins/bundle/src/: bundler.rs  config.rs  installer.rs  lib.rs  platform.rs  schedule.rs  tool.rs
plugins/bundle/src/config/: default.toml
plugins/bundle/src/tool/: Dotfiles.md  Script.md  Version Manager.md  dotfiles.rs  homebrew.rs  script.rs  tailwind.rs  unix.rs  vm.rs
plugins/bundle/src/tool/unix/: Homebrew.md  homebrew.rs
plugins/bundle/src/tool/vm/: Node.js.md  nodejs.rs  tailwind.rs  tailwindcss.rs
plugins/config/: Cargo.toml
plugins/config/src/: lib.rs  parser.rs  schedule.rs  util.rs
plugins/core/: Cargo.toml
plugins/core/src/: lib.rs  schedule.rs  ui_state.rs
plugins/macro/: Cargo.toml
plugins/macro/src/: cli.rs  lib.rs  subcommand.rs
plugins/task/src/: async_action.rs
plugins/ui/cli/src/: lib.rs  render_mode.rs
plugins/ui/desktop/: Cargo.toml
plugins/ui/desktop/next/: Cargo.toml
plugins/ui/desktop/next/src/: converters.rs  event.rs  lib.rs  system.rs  tao_config.rs  tao_windows.rs
plugins/ui/desktop/src/: event.rs  hooks.rs  index.html  protocol.rs  setting.rs  system.rs  window.rs
plugins/ui/web/: Cargo.toml
plugins/ui/web/src/: lib.rs
plugins/web3/device/: Cargo.toml
plugins/web3/device/src/: lib.rs
plugins/web3/starknet/: Cargo.toml
plugins/web3/starknet/src/: lib.rs
src/: action.rs  cli.rs  config.rs  lib.rs  main.rs  plugin.rs  resource.rs  tool.rs
src/cli/: action.rs  async_action.rs  build.rs  bundle.rs  device.rs
src/cli/action/: build.rs
src/config/: Project.toml  User.toml
src/plugin/: action.rs  async_action.rs  cli.rs  dip.rs  handler.rs  tool.rs
src/plugin/action/: build.rs  bundle.rs  tool.rs
src/resource/: platform.rs  tool.rs
