[package]
name = "dip"
version = "0.1.0"
authors = ["Junichi Sugiura"]
edition = "2021"
description = "Write cross-platform application with React-like declarative UI framework and scalable ECS architecture all in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/diptools/dip/"
homepage = "https://github.com/diptools/dip/"
documentation = "https://docs.rs/dip/latest/dip/"
keywords = ["declarative-ui", "ecs", "bevy", "dioxus", "cross-platform"]

[dependencies]
bevy = { version = "0.8", default-features = false }
clap = { version = "3.2", features = ["derive"], optional = true }
dioxus = { version = "0.2", features = ["fermi"] }

dip_core = { version = "0.1", path = "./packages/core" }
dip_desktop = { version = "0.1", path = "./packages/desktop", optional = true }
dip_macro = { version = "0.1", path = "./packages/macro" }
dip_cli = { version = "0.1", path = "./packages/cli", optional = true }

[dev-dependencies]
leafwing-input-manager = { version = "0.5", default-features = false }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "sync"], default-features = false }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["cli"]
desktop = ["dip_desktop"]
cli = ["dip_cli", "clap"]

[workspace]
members = [
    "packages/cli",
    "packages/core",
    "packages/desktop",
    "packages/macro",
    "examples/todomvc",
]

# CLI
[[example]]
name = "cli"
path = "examples/cli/cli.rs"
required-features = ["cli"]

[[example]]
name = "cli_async"
path = "examples/cli/async.rs"
required-features = ["cli"]

[[example]]
name = "cli_config"
path = "examples/cli/config/main.rs"
required-features = ["cli"]

# Desktop
[[example]]
name = "desktop_async"
path = "examples/desktop/async.rs"
required-features = ["desktop"]

[[example]]
name = "counter"
path = "examples/desktop/counter.rs"
required-features = ["desktop"]

[[example]]
name = "minimum"
path = "examples/desktop/minimum.rs"
required-features = ["desktop"]

[[example]]
name = "root_props"
path = "examples/desktop/root_props.rs"
required-features = ["desktop"]

# Desktop: keyboard
[[example]]
name = "keyboard"
path = "examples/desktop/keyboard/keyboard_event.rs"
required-features = ["desktop"]

[[example]]
name = "key_bindings"
path = "examples/desktop/keyboard/bindings.rs"
required-features = ["desktop"]

# Desktop: state management
[[example]]
name = "local_state"
path = "examples/desktop/state_management/local_state.rs"
required-features = ["desktop"]

[[example]]
name = "global_state"
path = "examples/desktop/state_management/global_state.rs"
required-features = ["desktop"]

[[example]]
name = "ecs"
path = "examples/desktop/state_management/ecs.rs"
required-features = ["desktop"]

# Desktop: window management
[[example]]
name = "window_settings"
path = "examples/desktop/window/settings.rs"
required-features = ["desktop"]

[[example]]
name = "render_mode"
path = "examples/desktop/window/render_mode.rs"
required-features = ["desktop"]

[[example]]
name = "multiple_windows"
path = "examples/desktop/window/multiple_windows.rs"
required-features = ["desktop"]

[[example]]
name = "scale_factor_override"
path = "examples/desktop/window/scale_factor_override.rs"
required-features = ["desktop"]
