[package]
name = "todomvc"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono = "0.4"
dip.workspace = true
tokio.workspace = true

# Removing this line will throw error in `./src/component.rs`.
# This is because some derive macros generates code using sub crate name instead of root (i.e. bevy_ecs::Component vs bevy::ecs::Compoent)
bevy_ecs.workspace = true

[[bin]]
name = "todomvc"
path = "src/main.rs"
