[package]
name = "dip_bundle"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
dip_core.workspace = true
dirs.workspace = true
cmd_lib.workspace = true
convert_case.workspace = true
pathdiff.workspace = true
reqwest.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[features]
# default = ["full"]
full = ["brew", "dotfiles", "tailwind", "vm"]
brew = []
dotfiles = []
tailwind = []
vm = []
