[package]
name = "dip_config"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
bevy.workspace = true
config.workspace = true
dirs.workspace = true
serde.workspace = true
