[package]
name = "dip_config"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
config.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
