[package]
name = "dip_macro"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
dirs.workspace = true
quote = "1.0"
proc-macro2 = "1.0.89"
syn = { version = "1.0", features = [ "full", "fold" ]}
