[package]
name = "dip_web"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
bevy.workspace = true
dioxus.workspace = true
dioxus-core.workspace = true
dioxus-web = "0.2"
