[package]
name = "dip_device"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
bevy.workspace = true
hidapi = "1.3"
ledger-transport-hid = "0.10"
ledger-zondax-generic = "0.10"
once_cell = "1.16"
tokio.workspace = true
