[package]
name = "dip_starknet"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
bevy.workspace = true
eyre = "0.6"
# beerus_core = { git = "https://github.com/keep-starknet-strange/beerus" }
# beerus_core = { path = "../../../../../JunichiSugiura/beerus/beerus_core" }
beerus_core = { git = "https://github.com/danilowhk/beerus", branch = "helios_0.2.0_implementation" }
tokio.workspace = true

# temporary dependencies
dotenv =  "0.15"
prettytable-rs = "0.10"
